criação do index

--- a/empresa.html
+++ b/empresa.html
@@ -9,17 +9,17 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;800;900&display=block" rel="stylesheet"> -->
         <!-- fonte importada do google fonts, add + e copy link -->
-    <title>StudiOn</title>
+    <title>StudiOn - Empresa</title>
 </head>
 <body>
     <nav>
-        <a href="./"></a>
+        <a href="./index.html"></a>
         <h1>Studi<span class="accent">on</span>
         <span class="subtitle">Eventos</span>
-        </h1>
+        </h1>  
         <Ul>
             <li>
-            <a href="./empresa.html">Empresa</a></li>
+            <a href="#" class="emp">Empresa</a></li>
             <li>
             <a href="#">Eventos</a></li>
             <li>
