--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href=".\css\empresa.css">
+    <link rel="stylesheet" href=".\css\home.css">
 <!-- <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;800;900&display=block" rel="stylesheet"> -->
@@ -13,13 +13,10 @@
 </head>
 <body>
     <nav>
-        <a href="./"></a>
-        <h1>Studi<span class="accent">on</span>
-        <span class="subtitle">Eventos</span>
-        </h1>
+        <h1>Studi<span class="accent">on</span><span class="subtitle">Eventos</span></h1>  
         <Ul>
             <li>
-            <a href="./empresa.html">Empresa</a></li>
+            <a href="#" class="emp">Empresa</a></li>
             <li>
             <a href="#">Eventos</a></li>
             <li>
@@ -30,7 +27,7 @@
             <a href="#">Contato</a></li>
         </Ul>      
     </nav>
-   
+    <br><br><br><br><br><br><br>
 
     <header class="container">
         <h2>.empresa</h2>
