--- a/empresa.html
+++ b/empresa.html
@@ -4,19 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href=".\css\empresa.css">
+    <link rel="stylesheet" href=".\css\home.css">
 <!-- <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;800;900&display=block" rel="stylesheet"> -->
         <!-- fonte importada do google fonts, add + e copy link -->
-    <title>StudiOn - Empresa</title>
+    <title>StudiOn</title>
 </head>
 <body>
     <nav>
-        <a href="./index.html"></a>
-        <h1>Studi<span class="accent">on</span>
-        <span class="subtitle">Eventos</span>
-        </h1>  
+        <h1>Studi<span class="accent">on</span><span class="subtitle">Eventos</span></h1>  
         <Ul>
             <li>
             <a href="#" class="emp">Empresa</a></li>
@@ -30,7 +27,7 @@
             <a href="#">Contato</a></li>
         </Ul>      
     </nav>
-   
+    <br><br><br><br><br><br><br>
 
     <header class="container">
         <h2>.empresa</h2>
