correção geral das paginas

--- a/empresa.html
+++ b/empresa.html
@@ -4,16 +4,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href=".\css\home.css">
+    <link rel="stylesheet" href=".\css\empresa.css">
 <!-- <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;800;900&display=block" rel="stylesheet"> -->
         <!-- fonte importada do google fonts, add + e copy link -->
-    <title>StudiOn</title>
+    <title>StudiOn - Empresa</title>
 </head>
 <body>
     <nav>
-        <h1>Studi<span class="accent">on</span><span class="subtitle">Eventos</span></h1>  
+        <a href="./index.html"></a>
+        <h1>Studi<span class="accent">on</span>
+        <span class="subtitle">Eventos</span>
+        </h1>  
         <Ul>
             <li>
             <a href="#" class="emp">Empresa</a></li>
@@ -27,7 +30,7 @@
             <a href="#">Contato</a></li>
         </Ul>      
     </nav>
-    <br><br><br><br><br><br><br>
+   
 
     <header class="container">
         <h2>.empresa</h2>
@@ -78,7 +81,6 @@
         </div>
         <hr class="linha"> </hr> 
         <p class="container letra">Studi<span class="accent">on</span> - Todos os direitos reservados</p>
-               
-    </footer> 
+    </footer>
 </body>
 </html>
