--- a/index.html
+++ b/index.html
@@ -13,10 +13,11 @@
 </head>
 <body>
     <nav>
-        <a href="./"></a>
-        <h1>Studi<span class="accent">on</span>
-        <span class="subtitle">Eventos</span>
-        </h1>
+        <a href="./">
+            <h1>Studi<span class="accent">on</span>
+            <span class="subtitle">Eventos</span>
+            </h1>
+        </a>
         <Ul>
             <li>
             <a href="./empresa.html">Empresa</a></li>
@@ -38,9 +39,13 @@
         </header>
     <main>
         <section class="container s1">
-            <h4>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Tenetur cupiditate id veniam.</h4>
-            <p class="p1">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dignissimos dicta sit vitae laudantium cumque dolorum!</p>
-            <p class="p2">ipsum dolor sit amet, consectetur adipisicing elit. Neque quasi animi doloribus soluta aperiam saepe quidem ad.</p>
+            <h4>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Tenetur cupiditate id veniam.
+                <small>
+                lorem, ipsum dolor sit amet consectetur adipisicing elit. Dignissimos dicta sit vitae laudantium cumque dolorum!
+                <br><br>
+                ipsum dolor sit amet, consectetur adipisicing elit. Neque quasi animi doloribus soluta aperiam saepe quidem ad.
+                </small>
+            </h4>   
             <div class="lines"> 
                 <img src="./images/pessoa.png" alt="Uma homem branco, falando ao telefone celular, olhando para frente" class="pessoa" > 
             </div>
@@ -57,7 +62,7 @@
 
     <footer>
         <div class="container">
-            <h1>Studi<span class="accent">on</span><br><span class="subtitlo">Eventos</span></h1> 
+            <h2>Studi<span class="accent">on</span><br><span class="subtitlo">Eventos</span></h2> 
         <form>
             <label>
                 Receba News e Promoções
@@ -80,7 +85,7 @@
         </ul>
         </div>
         <hr class="linha"> </hr> 
-        <p class="container letra">Studi<span class="accent">on</span> - Todos os direitos reservados</p>
+        <p class="container">Studi<span>on</span> - Todos os direitos reservados</p>
     </footer>
 </body>
 </html>
