--- a/index.html
+++ b/index.html
@@ -1,91 +1,236 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
-<head>
+  <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href=".\css\empresa.css">
-<!-- <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;800;900&display=block" rel="stylesheet"> -->
-        <!-- fonte importada do google fonts, add + e copy link -->
-    <title>StudiOn</title>
-</head>
-<body>
-    <nav>
-        <a href="./">
-            <h1>Studi<span class="accent">on</span>
-            <span class="subtitle">Eventos</span>
-            </h1>
-        </a>
-        <Ul>
-            <li>
-            <a href="./empresa.html">Empresa</a></li>
-            <li>
-            <a href="#">Eventos</a></li>
-            <li>
-            <a href="#">Galeria</a></li>
-            <li>
-            <a href="#">Depoimentos</a></li>
-            <li>
-            <a href="#">Contato</a></li>
-        </Ul>      
+    <link rel="stylesheet" href="./css/home.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css">
+    <title>Studion</title>
+  </head>
+  <body>
+    <nav class="nav">
+      <a href="./">
+        <h1 class="logo">
+          Studi<span class="accent">on</span>
+          <span class="subtitle">Eventos</span>
+        </h1>
+      </a>
+      <input id="menu-toggle" type="checkbox" />
+      <label class="menu-button-container" for="menu-toggle">
+        <div class="menu-button"></div>
+      </label>
+      <ul class="menu">
+        <li>
+          <a href="./empresa.html">Empresa</a>
+        </li>
+        <li>
+          <a href="./eventos.html">Eventos</a>
+        </li>
+        <li>
+          <a href="./galeria.html">Galeria</a>
+        </li>
+        <li>
+          <a href="./depoimentos.html">Depoimentos</a>
+        </li>
+        <li>
+          <a href="./contato.html">Contato</a>
+        </li>
+      </ul>
     </nav>
-   
 
-    <header class="container">
-        <h2>.empresa</h2>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus perspiciatis ab repellendus consectetur debitis molestiae. Dolorum, quis porro? Cum debitis similique dolor, ducimus ut placeat possimus soluta amet facere autem.</p>
-        </header>
-    <main>
-        <section class="container s1">
-            <h4>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Tenetur cupiditate id veniam.
-                <small>
-                lorem, ipsum dolor sit amet consectetur adipisicing elit. Dignissimos dicta sit vitae laudantium cumque dolorum!
-                <br><br>
-                ipsum dolor sit amet, consectetur adipisicing elit. Neque quasi animi doloribus soluta aperiam saepe quidem ad.
-                </small>
-            </h4>   
-            <div class="lines"> 
-                <img src="./images/pessoa.png" alt="Uma homem branco, falando ao telefone celular, olhando para frente" class="pessoa" > 
+    <header>
+      <section class="carousel" aria-label="Gallery">
+        <ol class="carousel__viewport">
+          <li
+            id="carousel__slide1"
+            tabindex="0"
+            class="carousel__slide"
+          >
+            <div class="carousel__snapper"></div>
+            <a href="#carousel__slide3"
+                class="carousel__prev"></a>
+
+            <img
+              class="slide__background-image"
+              src="./images/home/banner1.jpeg"
+              alt="banner1"
+            />
+            <div class="slide__info">
+              <div class="slide__info__content">
+                <h6 class="slide__info__date">
+                  <span class="slide__info__accent">PRÓXIMO EVENTO</span> - DIA 25 DE SETEMBRO ÀS 19H
+                </h6>
+                <h2 class="slide__info__title">
+                  <span class="slide__info__accent">CREATIVE</span> MINDS
+                </h2>
+                <button class="slide__info__button">SAIBA MAIS</button>
+              </div>
             </div>
-        </section>  
-        <section class="container s2">
-            <h4>Quem Confia no Nosso Trabalho</h4>
-            <img src="./images/logos.png" alt="as logomarcas das empresas que confiam em nosso trabalho entre elas estão as marcas Nokia, KFC, Barclays, Burguer King, Shell, Paypal
-            Land Rover, Samsung, Absolut, Coca Cola, entre outras grandes marcas ">
-        </section>
-        <section class="container s3">
-            <img src="./images/video.jpeg" alt="Pessoa sentada na na sacada de um prédio, olhando o horizonte"/>
-         </section>
+
+            <a href="#carousel__slide2"
+                class="carousel__next"></a>
+          </li>
+          <li
+            id="carousel__slide2"
+            tabindex="0"
+            class="carousel__slide"
+          >
+            <div class="carousel__snapper"></div>
+            <a href="#carousel__slide1"
+                class="carousel__prev"></a>
+
+            <img
+              class="slide__background-image"
+              src="./images/home/banner2.jpeg"
+              alt="banner2"
+              style="filter: brightness(0.5);"
+            />
+            <div class="slide__info">
+              <div class="slide__info__content">
+                <h6 class="slide__info__date">
+                  <span class="slide__info__accent">PRÓXIMO EVENTO</span> - DIA 25 DE SETEMBRO ÀS 19H
+                </h6>
+                <h2 class="slide__info__title">
+                  <span class="slide__info__accent">FEST</span> FOWARD
+                </h2>
+                <button class="slide__info__button">SAIBA MAIS</button>
+              </div>
+            </div>
+
+            <a href="#carousel__slide3"
+                class="carousel__next"></a>
+          </li>
+          <li
+            id="carousel__slide3"
+            tabindex="0"
+            class="carousel__slide"
+          >
+            <div class="carousel__snapper"></div>
+            <a href="#carousel__slide2"
+                class="carousel__prev"></a>
+
+            <img
+              class="slide__background-image"
+              src="./images/home/banner3.jpeg"
+              alt="banner3"
+            />
+            <div class="slide__info">
+              <div class="slide__info__content">
+                <h6 class="slide__info__date">
+                  <span class="slide__info__accent">PRÓXIMO EVENTO</span> - DIA 25 DE SETEMBRO ÀS 19H
+                </h6>
+                <h2 class="slide__info__title">
+                  <span class="slide__info__accent">SHOE</span> FOWARD
+                </h2>
+                <button class="slide__info__button">SAIBA MAIS</button>
+              </div>
+            </div>
+
+            <a href="#carousel__slide1"
+                class="carousel__next"></a>
+          </li>
+        </ol>
+      </section>
+    </header>
+
+    <main>
+      <section class="counter">
+        <ul class="container counter_container">
+          <li>
+            <h3>
+              + DE <span class="counter__number">140</span>
+              <small>EVENTOS REALIZADOS</small>
+            </h3>
+          </li>
+          <li>
+            <h3>
+              + DE <span class="counter__number">280000</span>
+              <small>INGRESSOS VENDIDOS</small>
+            </h3>
+          </li>
+          <li>
+            <h3>
+              + DE <span class="counter__number">84</span>
+              <small>EMPRESAS ATENDIDAS</small>
+            </h3>
+          </li>
+        </ul>
+      </section>
+
+      <section class="container institutional">
+        <img
+          class="institutional__image"
+          src="./images/home/institutional.jpeg"
+          alt="institutional"
+        />
+        <div class="institutional__info">
+          <h6>
+            FAZEMOS O SEU EVENTO ACONTECER
+          </h6>
+          <h4>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit.
+          </h4>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Vitae nobis, perspiciatis eveniet, eum animi modi deleniti beatae sequi ullam cupiditate, quas excepturi saepe nemo ex veritatis sunt doloremque voluptates corporis.
+          </p>
+          <a href="./empresa.html">SAIBA MAIS</a>
+        </div>
+      </section>
+
+      <section class="quote">
+        <div class="container quote__container">
+          <div class="quote__content">
+            <h6>
+              Você informa a temática e nós planejamos um evento com tecnologia e
+            </h6>
+            <h2>
+              <span>MUITO+</span> DIVERSÃO
+            </h2>
+            <a href="./contato.html">FAZER COTAÇÃO</a>
+          </div>
+        </div>
+      </section>
     </main>
 
-    <footer>
-        <div class="container">
-            <h2>Studi<span class="accent">on</span><br><span class="subtitlo">Eventos</span></h2> 
+    <footer class="footer">
+      <div class="container footer__container">
+        <h2>
+          Studi<span class="accent">on</span>
+          <span class="subtitle">Eventos</span>
+        </h2>
         <form>
-            <label>
-                Receba News e Promoções
-            </label>
-            <input type="email" placeholder="Email"/>
-            <button type="submit">
-                <img src="./images/send2.svg" alt="Enviar">
-            </button>
-        </form> 
-        <ul>
-            <li>
-                <a href="www.facebook.com"> <img src="./images/facebook.svg" alt="facebook"></a>
-            </li>
-            <li>
-                <a href="#"> <img src="./images/whatsapp.svg" alt="whatsapp"></a>
-            </li>
-            <li>
-                <a href="www.youtube.com"> <img src="./images/youtube.svg" alt="youtube"></a>
-            </li>
+          <label>Receba News e
+            promoçoes</label>
+          <input type="email" placeholder="Email" />
+          <button type="submit">
+            <img class="icon" src="./images/icons/send2.svg" alt="enviar">
+          </button>
+        </form>
+        <ul class="socials">
+          <li>
+            <a href="#">
+              <img class="icon" src="./images/icons/facebook.svg" alt="facebook">
+            </a>
+          </li>
+          <li>
+            <a href="#">
+              <img class="icon" src="./images/icons/whatsapp.svg" alt="whatsapp">
+            </a>
+          </li>
+          <li>
+            <a href="#">
+              <img class="icon" src="./images/icons/youtube.svg" alt="youtube">
+            </a>
+          </li>
         </ul>
-        </div>
-        <hr class="linha"> </hr> 
-        <p class="container">Studi<span>on</span> - Todos os direitos reservados</p>
+      </div>
+      <hr />
+      <p class="container copyright">Studi<span>on</span> - Todos os direitos reservados</p>
     </footer>
-</body>
+
+  
+
+    <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
+  </body>
 </html>
