--- a/empresa.html
+++ b/empresa.html
@@ -1,86 +1,117 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
-<head>
+  <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href=".\css\empresa.css">
-<!-- <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;800;900&display=block" rel="stylesheet"> -->
-        <!-- fonte importada do google fonts, add + e copy link -->
-    <title>StudiOn - Empresa</title>
-</head>
-<body>
-    <nav>
-        <a href="./index.html"></a>
-        <h1>Studi<span class="accent">on</span>
-        <span class="subtitle">Eventos</span>
-        </h1>  
-        <Ul>
-            <li>
-            <a href="#" class="emp">Empresa</a></li>
-            <li>
-            <a href="#">Eventos</a></li>
-            <li>
-            <a href="#">Galeria</a></li>
-            <li>
-            <a href="#">Depoimentos</a></li>
-            <li>
-            <a href="#">Contato</a></li>
-        </Ul>      
+    <link rel="stylesheet" href="./css/empresa.css">
+    <title>Studion - Empresa</title>
+  </head>
+  <body>
+    <nav class="nav">
+      <a href="./">
+        <h1 class="logo">
+          Studi<span class="accent">on</span>
+          <span class="subtitle">Eventos</span>
+        </h1>
+      </a>
+      <input id="menu-toggle" type="checkbox" />
+      <label class="menu-button-container" for="menu-toggle">
+        <div class="menu-button"></div>
+      </label>
+      <ul class="menu">
+        <li>
+          <a href="#" class="active">Empresa</a>
+        </li>
+        <li>
+          <a href="./eventos.html">Eventos</a>
+        </li>
+        <li>
+          <a href="./galeria.html">Galeria</a>
+        </li>
+        <li>
+          <a href="./depoimentos.html">Depoimentos</a>
+        </li>
+        <li>
+          <a href="./contato.html">Contato</a>
+        </li>
+      </ul>
     </nav>
-   
 
-    <header class="container">
+    <header>
+      <img class="header__background" src="./images/headers/header-empresa.jpeg" alt="prédios">
+      <div class="container container__header">
         <h2>.empresa</h2>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus perspiciatis ab repellendus consectetur debitis molestiae. Dolorum, quis porro? Cum debitis similique dolor, ducimus ut placeat possimus soluta amet facere autem.</p>
-        </header>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam eget ligula eu lectus lobortis condimentum. Aliquam nonummy auctor massa</p>
+      </div>
+    </header>
+
     <main>
-        <section class="container s1">
-            <h4>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Tenetur cupiditate id veniam.</h4>
-            <p class="p1">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dignissimos dicta sit vitae laudantium cumque dolorum!</p>
-            <p class="p2">ipsum dolor sit amet, consectetur adipisicing elit. Neque quasi animi doloribus soluta aperiam saepe quidem ad.</p>
-            <div class="lines"> 
-                <img src="./images/pessoa.png" alt="Uma homem branco, falando ao telefone celular, olhando para frente" class="pessoa" > 
-            </div>
-        </section>  
-        <section class="container s2">
-            <h4>Quem Confia no Nosso Trabalho</h4>
-            <img src="./images/logos.png" alt="as logomarcas das empresas que confiam em nosso trabalho entre elas estão as marcas Nokia, KFC, Barclays, Burguer King, Shell, Paypal
-            Land Rover, Samsung, Absolut, Coca Cola, entre outras grandes marcas ">
-        </section>
-        <section class="container s3">
-            <img src="./images/video.jpeg" alt="Pessoa sentada na na sacada de um prédio, olhando o horizonte"/>
-         </section>
+      <section class="container section1">
+        <h4 class="text">
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+          <small>
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+            <br><br>
+            Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate
+          </small>
+        </h4>
+        <div class="lines">
+          <img src="./images/pessoa.png" alt="pessoa falando ao celular" class="pessoa">
+        </div>
+      </section>
+
+      <section class="section2">
+        <h4 class="container">Quem Confia no nosso trabalho</h4>
+        <img src="./images/logos.png" alt="Logos de empresa parceiras" class="container" />
+      </section>
+
+      <section class="container section3">
+        <iframe
+          src="https://www.youtube.com/embed/D8v9CG2bZ9o?si=TW4pSlZvQ6wcj6by"
+          title="YouTube video player"
+          frameborder="0"
+          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+          allowfullscreen
+        >
+        </iframe>
+      </section>
     </main>
 
-    <footer>
-        <div class="container">
-            <h1>Studi<span class="accent">on</span><br><span class="subtitlo">Eventos</span></h1> 
+    <footer class="footer">
+      <div class="container footer__container">
+        <h2>
+          Studi<span class="accent">on</span>
+          <span class="subtitle">Eventos</span>
+        </h2>
         <form>
-            <label>
-                Receba News e Promoções
-            </label>
-            <input type="email" placeholder="Email"/>
-            <button type="submit">
-                <img src="./images/send2.svg" alt="Enviar">
-            </button>
-        </form> 
-        <ul>
-            <li>
-                <a href="www.facebook.com"> <img src="./images/facebook.svg" alt="facebook"></a>
-            </li>
-            <li>
-                <a href="#"> <img src="./images/whatsapp.svg" alt="whatsapp"></a>
-            </li>
-            <li>
-                <a href="www.youtube.com"> <img src="./images/youtube.svg" alt="youtube"></a>
-            </li>
+          <label>Receba News e
+            promoçoes</label>
+          <input type="email" placeholder="Email" />
+          <button type="submit">
+            <img class="icon" src="./images/icons/send2.svg" alt="enviar">
+          </button>
+        </form>
+        <ul class="socials">
+          <li>
+            <a href="#">
+              <img class="icon" src="./images/icons/facebook.svg" alt="facebook">
+            </a>
+          </li>
+          <li>
+            <a href="#">
+              <img class="icon" src="./images/icons/whatsapp.svg" alt="whatsapp">
+            </a>
+          </li>
+          <li>
+            <a href="#">
+              <img class="icon" src="./images/icons/youtube.svg" alt="youtube">
+            </a>
+          </li>
         </ul>
-        </div>
-        <hr class="linha"> </hr> 
-        <p class="container letra">Studi<span class="accent">on</span> - Todos os direitos reservados</p>
+      </div>
+      <hr />
+      <p class="container copyright">Studi<span>on</span> - Todos os direitos reservados</p>
     </footer>
-</body>
+  </body>
 </html>
