--- a/empresa.html
+++ b/empresa.html
@@ -62,7 +62,7 @@
       </section>
 
       <section class="section2">
-        <h4 class="container">Quem Confia no nosso trabalho</h4>
+        <h4 class="container">Quem Confia no nosso trabalho</h4><!-- container foi definido aqui pois a section 2 necessitava de pegar pagina inteira e o container está limitando no css -->
         <img src="./images/logos.png" alt="Logos de empresa parceiras" class="container" />
       </section>
 
