--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   </head>
   <body>
     <nav class="nav">
-      <a href="./">
+      <a href="./"> <!-- padrão quando se quer voltar pra pagina inicial -->
         <h1 class="logo">
           Studi<span class="accent">on</span>
           <span class="subtitle">Eventos</span>
