--- a/contato.html
+++ b/contato.html
@@ -43,8 +43,9 @@
         class="header__background"
         src="./images/headers/header-contato.jpeg"
         alt="macbook"
-        style="filter: brightness(0.2);"
+        style="filter: brightness(0.2);" 
       />
+      <!-- coloração da imagem -->
       <div class="container container__header">
         <h2>.contato</h2>
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam eget ligula eu lectus lobortis condimentum. Aliquam nonummy auctor massa</p>
@@ -58,16 +59,16 @@
             <h4>LIGUE PRA GENTE</h4>
             <p>
               <img class="icon" src="./images/icons/phone.png" alt="telefone">
-              +55 48 3223-5769
+              +55 24 3223-5769
             </p>
             <p>
               <img class="icon" src="./images/icons/whatsapp.png" alt="whatsapp">
-              +55 48 99943-7777
+              +55 24 99943-7777
             </p>
             <h4>VENHA CONHECER NOSSA CASA</h4>
             <p class="address">
               <img class="icon" src="./images/icons/location.png" alt="localização">
-              Rua miguel duax, 129 - coqueiros Florianópolis/sc
+              Rua Prefeito Walter Franklin, 13 - Centro - Três Rios/RJ
             </p>
           </div>
         </section>
@@ -89,12 +90,12 @@
 
       <section class="section2">
         <iframe
-          src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3535.5095511465092!2d-48.5802134237463!3d-27.60873117623916!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95273797c70f436f%3A0xb32b6638eb2498c1!2sR.%20Miguel%20Daux%2C%20129%20-%20Coqueiros%2C%20Florian%C3%B3polis%20-%20SC%2C%2088080-220!5e0!3m2!1spt-PT!2sbr!4v1700523587726!5m2!1spt-PT!2sbr"
+          src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3696.2649536310437!2d-43.20906430000001!3d-22.115871499999997!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x98f67ed7ee9e59%3A0xcb1a6e4c9bf09765!2sR.%20Pref.%20Walter%20Franklin%2C%2013%20-%20Centro%2C%20Tr%C3%AAs%20Rios%20-%20RJ%2C%2025803-010!5e0!3m2!1spt-BR!2sbr!4v1702336036784!5m2!1spt-BR!2sbr"
           allowfullscreen=""
           loading="lazy"
           referrerpolicy="no-referrer-when-downgrade"
           class="map"
-        >
+        ><!-- iframe permite que voce replique outras imagens dentro do seu site -->
       </iframe>
       </section>
     </main>
