--- a/depoimentos.html
+++ b/depoimentos.html
@@ -1,68 +1,60 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
-  <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="./css/depoimentos.css">
-    <title>Studion - Depoimentos</title>
-  </head>
-  <body>
-    <nav class="nav">
-      <a href="./">
-        <h1 class="logo">
-          Studi<span class="accent">on</span>
-          <span class="subtitle">Eventos</span>
-        </h1>
-      </a>
-      <input id="menu-toggle" type="checkbox" />
-      <label class="menu-button-container" for="menu-toggle">
-        <div class="menu-button"></div>
-      </label>
-      <ul class="menu">
-        <li>
-          <a href="./empresa.html">Empresa</a>
-        </li>
-        <li>
-          <a href="./eventos.html">Eventos</a>
-        </li>
-        <li>
-          <a href="./galeria.html">Galeria</a>
-        </li>
-        <li>
-          <a href="#" class="active">Depoimentos</a>
-        </li>
-        <li>
-          <a href="./contato.html">Contato</a>
-        </li>
-      </ul>
-    </nav>
 
-    <header>
-      <img
-        class="header__background"
-        src="./images/headers/header-depoimentos.jpeg"
-        alt="macbook"
-        style="filter: brightness(0.6);"
-      />
-      <div class="container container__header">
-        <h2 class="testimonials-title">.depoimentos</h2>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam eget ligula eu lectus lobortis condimentum. Aliquam nonummy auctor massa</p>
-      </div>
-    </header>
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css">
+  <link rel="stylesheet" href="./css/depoimentos.css">
+  <title>Studion - Depoimentos</title>
+</head>
 
-    <main>
-      <section class="container carousel" aria-label="Gallery">
-        <ol class="carousel__viewport">
-          <li
-            id="carousel__slide1"
-            tabindex="0"
-            class="carousel__slide"
-          >
-            <div class="carousel__snapper"></div>
-            <a href="#carousel__slide3"
-                class="carousel__prev"></a>
+<body>
+  <nav class="nav">
+    <a href="./">
+      <h1 class="logo">
+        Studi<span class="accent">on</span>
+        <span class="subtitle">Eventos</span>
+      </h1>
+    </a>
+    <ul id="menu" class="desktop">
+      <li>
+        <a href="./empresa.html">Empresa</a>
+      </li>
+      <li>
+        <a href="./eventos.html">Eventos</a>
+      </li>
+      <li>
+        <a href="./galeria.html">Galeria</a>
+      </li>
+      <li>
+        <a href="#" class="active">Depoimentos</a>
+      </li>
+      <li>
+        <a href="./contato.html">Contato</a>
+      </li>
+    </ul>
+    <button class="nav__menu-btn">
+      <i class="fas fa-bars"></i>
+    </button>
+  </nav>
 
+  <header>
+    <img class="header__background" src="./images/headers/header-depoimentos.jpeg" alt="macbook"
+      style="filter: brightness(0.6);" />
+    <div class="container container__header">
+      <h2 class="testimonials-title">.depoimentos</h2>
+      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam eget ligula eu lectus lobortis condimentum.
+        Aliquam nonummy auctor massa</p>
+    </div>
+  </header>
+
+  <main>
+    <section class="container slider">
+      <div class="swiper">
+        <div class="swiper-wrapper">
+          <div class="swiper-slide">
             <section class="section">
               <img class="user-image" src="./images/testimonials/number-one.jpeg" alt="alberto">
               <h4 class="name">
@@ -71,22 +63,12 @@
               </h4>
               <p class="quotes">“</p>
               <p class="text">
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam eget ligula eu lectus lobortis condimentum. Aliquam nonummy auctor massa
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam eget ligula eu lectus lobortis
+                condimentum. Aliquam nonummy auctor massa
               </p>
             </section>
-
-            <a href="#carousel__slide2"
-                class="carousel__next"></a>
-          </li>
-          <li
-            id="carousel__slide2"
-            tabindex="0"
-            class="carousel__slide"
-          >
-            <div class="carousel__snapper"></div>
-            <a href="#carousel__slide1"
-               class="carousel__prev"></a>
-
+          </div>
+          <div class="swiper-slide">
             <section class="section">
               <img class="user-image" src="./images/testimonials/number-two.png" alt="alberto">
               <h4 class="name">
@@ -95,22 +77,12 @@
               </h4>
               <p class="quotes">“</p>
               <p class="text">
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam eget ligula eu lectus lobortis condimentum. Aliquam nonummy auctor massa
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam eget ligula eu lectus lobortis
+                condimentum. Aliquam nonummy auctor massa
               </p>
             </section>
-
-            <a href="#carousel__slide3"
-               class="carousel__next"></a>
-          </li>
-          <li
-            id="carousel__slide3"
-            tabindex="0"
-            class="carousel__slide"
-          >
-            <div class="carousel__snapper"></div>
-            <a href="#carousel__slide2"
-               class="carousel__prev"></a>
-
+          </div>
+          <div class="swiper-slide">
             <section class="section">
               <img class="user-image" src="./images/testimonials/number-three.png" alt="alberto">
               <h4 class="name">
@@ -119,67 +91,61 @@
               </h4>
               <p class="quotes">“</p>
               <p class="text">
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam eget ligula eu lectus lobortis condimentum. Aliquam nonummy auctor massa
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam eget ligula eu lectus lobortis
+                condimentum. Aliquam nonummy auctor massa
               </p>
             </section>
-   
-            <a href="#carousel__slide1"
-               class="carousel__next"></a>
-          </li>
-        </ol>
-        <aside class="carousel__navigation">
-          <ol class="carousel__navigation-list">
-            <li class="carousel__navigation-item">
-              <a href="#carousel__slide1"
-                 class="carousel__navigation-button"></a>
-            </li>
-            <li class="carousel__navigation-item">
-              <a href="#carousel__slide2"
-                 class="carousel__navigation-button"></a>
-            </li>
-            <li class="carousel__navigation-item">
-              <a href="#carousel__slide3"
-                 class="carousel__navigation-button"></a>
-            </li>
-          </ol>
-        </aside>
-      </section>
-    </main>
-
-    <footer class="footer">
-      <div class="container footer__container">
-        <h2>
-          Studi<span class="accent">on</span>
-          <span class="subtitle">Eventos</span>
-        </h2>
-        <form>
-          <label>Receba News e
-            promoçoes</label>
-          <input type="email" placeholder="Email" />
-          <button type="submit">
-            <img class="icon" src="./images/icons/send2.svg" alt="enviar">
-          </button>
-        </form>
-        <ul class="socials">
-          <li>
-            <a href="#">
-              <img class="icon" src="./images/icons/facebook.svg" alt="facebook">
-            </a>
-          </li>
-          <li>
-            <a href="#">
-              <img class="icon" src="./images/icons/whatsapp.svg" alt="whatsapp">
-            </a>
-          </li>
-          <li>
-            <a href="#">
-              <img class="icon" src="./images/icons/youtube.svg" alt="youtube">
-            </a>
-          </li>
-        </ul>
+          </div>
+        </div>
+        <div class="swiper-pagination"></div>
+        <div class="swiper-button-prev"></div>
+        <div class="swiper-button-next"></div>
       </div>
-      <hr />
-      <p class="container copyright">Studi<span>on</span> - Todos os direitos reservados</p>
-    </footer>
-  </body>
+    </section>
+  </main>
+
+  <footer class="footer">
+    <div class="container footer__container">
+      <h2>
+        Studi<span class="accent">on</span>
+        <span class="subtitle">Eventos</span>
+      </h2>
+      <form id="newslatter-form">
+        <label>Receba News e
+          promoçoes</label>
+        <input id="email" type="email" placeholder="Email" />
+        <button type="submit">
+          <img class="icon" src="./images/icons/send2.svg" alt="enviar">
+        </button>
+      </form>
+      <ul class="socials">
+        <li>
+          <a href="#">
+            <img class="icon" src="./images/icons/facebook.svg" alt="facebook">
+          </a>
+        </li>
+        <li>
+          <a href="#">
+            <img class="icon" src="./images/icons/whatsapp.svg" alt="whatsapp">
+          </a>
+        </li>
+        <li>
+          <a href="#">
+            <img class="icon" src="./images/icons/youtube.svg" alt="youtube">
+          </a>
+        </li>
+      </ul>
+    </div>
+    <hr />
+    <p class="container copyright">Studi<span>on</span> - Todos os direitos reservados</p>
+  </footer>
+
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/waypoints/4.0.0/jquery.waypoints.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
+  <script src="https://smtpjs.com/v3/smtp.js"></script>
+  <script src="./depoimentos.js"></script>
+  <script src="./script.js"></script>
+</body>
+
 </html>
